--- a/src/assets/styles/sass/main.scss
+++ b/src/assets/styles/sass/main.scss
@@ -1,35 +1,312 @@
-body
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
-  -webkit-font-smoothing: antialiased
-  -moz-osx-font-smoothing: grayscale
-  background: #D8DAD3
+@import '_base.scss';
+@import "_fonts.scss";
 
-code
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace
+* {
+  box-sizing: border-box;
+  font-family: $p;
+  user-select: none;
+}
 
-body
-  margin: 0
-  padding: 0
-  height: 100vh
-  display: flex
-  justify-content: center
-  align-items: center
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background: $begie;
+}
 
-h1, h2, h3, h4, h5, h6, p
-  margin: 0
-  padding: 0
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
 
-.container
-  //width: 762px
-  max-width: 762px
+body {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-.container-inner
-  background: #F1F2EB
-  padding: 20px
-  border-radius: 10px
+h1, h2, h3, h4, h5, h6, p {
+  margin: 0;
+  padding: 0;
+}
 
-.auth__wrapper
-  width: 300px
+.container {
+  max-width: 762px;
+}
 
-  input:
-    w100%
+.container-inner {
+  position: relative;
+}
+
+.auth__checkbox__wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.auth__wrapper {
+  background: $begieLightAlpha75;
+  padding: 25px;
+  border-radius: $baseRa;
+  width: 300px;
+  font-size: 12px;
+  .auth__row {
+    width: 100%;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    margin-bottom: 15px;
+    &:focus {
+      outline: none;
+    }
+  }
+  .auth__password-wrapper {
+    position: relative;
+  }
+  .password_eye {
+    cursor: pointer;
+    color: $begieDark;
+    font-size: 13px;
+    position: absolute;
+    right: 15px;
+    top: 14px;
+  }
+  .auth__submit {
+    border: none;
+    margin-bottom: 0;
+    background: $begie;
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
+    &:hover {
+      filter: brightness(85%);
+    }
+  }
+  .auth__checkbox {
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+    cursor: pointer;
+  }
+  .auth__links {
+    display: flex;
+    flex-direction: column;
+    margin-top: 15px;
+    a {
+      text-decoration: none;
+      color: $begieDark;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+  .confirmation-code {
+    display: flex;
+    justify-content: space-between;
+    .auth__row {
+      width: 35px;
+      padding: 10px 5px;
+      text-align: center;
+      &:focus {
+        outline: 2px solid $begie;
+      }
+    }
+  }
+}
+.bgdrop1 {
+  top: -50px;
+  right: -50px;
+  z-index: -100;
+  position: absolute;
+  height: 150px;
+  width: 150px;
+  border-radius: 1000px;
+  background: rgb(171, 172, 165);
+  opacity: 1;
+}
+.bgdrop2 {
+  left: -20px;
+  bottom: 100px;
+  transform: rotate(-10deg);
+  z-index: -100;
+  position: absolute;
+  right: 0;
+  height: 30px;
+  width: 30px;
+  background: rgb(171, 172, 165);
+  opacity: 1;
+}
+.bgdrop3 {
+  right: 40px;
+  bottom: -25px;
+  z-index: 100;
+  position: absolute;
+  opacity: 0.65;
+  width: 0px;
+  height: 0px;
+  border-style: solid;
+  border-width: 0 21.5px 37.2px 21.5px;
+  border-color: transparent transparent rgb(171, 172, 165) transparent;
+  transform: rotate(9deg);
+}
+
+.not-found {
+  background: $begieLightAlpha75;
+  padding: 40px;
+  position: relative;
+  border-radius: $baseRa;
+  color: $begieDark;
+  .not-found__icon {
+    position: absolute;
+    font-size: 70px;
+    right: -40px;
+    top: -20px;
+    z-index: -999;
+  }
+}
+
+.reminder__wrapper {
+  background: $begieLightAlpha75;
+  padding: 25px;
+  border-radius: $baseRa;
+  width: 568px;
+  font-size: 12px;
+  .reminder__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .header__buttons {
+      display: flex;
+      align-items: center;
+      .btn__notifications {
+        margin-top: 1px;
+        position: relative;
+        .notifications__count {
+          position: absolute;
+          font-size: 7px;
+          color: white;
+          background: $orange;
+          height: 10px;
+          width: 10px;
+          border-radius: 100px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          line-height: 18px;
+          top: 3px;
+          right: -5px;
+        }
+      }
+      div {
+        margin-left: 18px;
+        font-size: 18px;
+        cursor: pointer;
+        color: $begieDark;
+      }
+    }
+    .header__logo {
+      font-weight: 700;
+      color: $begieDark;
+      font-size: 16px;
+      span {
+        color: $orangeLight;
+      }
+    }
+  }
+  .reminder__calendar {
+    margin: 30px 0;
+    .calendar__item {
+      width: 100%;
+      .item__wrapper {
+        cursor: pointer;
+        background: $begie;
+        border: 2px solid $begie;
+        color: black;
+        border-radius: $baseRa;
+        padding: 15px 10px;
+        text-align: center;
+        margin-bottom: 5px;
+        .item__weekday {
+          text-transform: capitalize;
+        }
+      }
+      &.current {
+        .item__wrapper {
+          background: black;
+          border: 2px solid black;
+          color: white;
+        }
+      }
+      &.selected {
+        .item__wrapper {
+          background: none;
+          border: 2px solid $begie;
+        }
+      }
+      &.current.selected {
+        .item__wrapper {
+          background: black;
+          border: 2px solid black;
+          color: white;
+        }
+      }
+
+      .item__progress {
+        display: flex;
+        justify-content: center;
+        div {
+          margin: 0 2px;
+          height: 5px;
+          width: 5px;
+          border-radius: 100px;
+        }
+        .progress__done {
+          background: $orange;
+        }
+        .progress__undone {
+
+          background: $orangeLight;
+        }
+      }
+    }
+  }
+  .reminder__tasks {
+    .tasks__item {
+      padding: 15px 10px;
+      background: $begieLight;
+      border-radius: $baseRa;
+      margin-bottom: 10px;
+      display: flex;
+      .item__checkbox {
+        cursor: pointer;
+        height: 20px;
+        width: 20px;
+        border-radius: 100px;
+        border: 3px solid $orangeLight;
+        margin-right: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: black;
+        font-size: 11px;
+        svg {
+          display: none;
+        }
+        &.checked {
+          background: $orange;
+          border: 3px solid $orange;
+          color: white;
+          svg {
+            display: block;
+          }
+        }
+      }
+    }
+
+  }
+}
+
+
+
+
+
+
