--- a/src/assets/styles/sass/_base.scss
+++ b/src/assets/styles/sass/_base.scss
@@ -1,7 +1,8 @@
 $begieLight: #F1F2EB;
 $begieLightAlpha75: rgba(241, 242, 235, 0.75);
+$begieLightAlpha25: rgba(241, 242, 235, 0.25);
 $begie: #D8DAD3;
-$begieDark: #94928e;
+$begieDark: #4d4d4d;
 $brown: #967E76;
 
 $orange: orangered;
