--- a/src/assets/styles/sass/main.scss
+++ b/src/assets/styles/sass/main.scss
@@ -180,12 +180,16 @@ h1, h2, h3, h4, h5, h6, p {
     display: flex;
     justify-content: space-between;
     align-items: center;
+
     .header__buttons {
       display: flex;
       align-items: center;
+      gap: 18px;
+
       .btn__notifications {
         margin-top: 1px;
         position: relative;
+
         .notifications__count {
           position: absolute;
           font-size: 7px;
@@ -202,19 +206,31 @@ h1, h2, h3, h4, h5, h6, p {
           right: -5px;
         }
 
-
+        &:hover {
+          .notifications__inner {
+            display: flex;
+          }
+        }
 
         .notifications {
-          position: relative;
+
+          &__inner {
+            display: none;
+            width: 200px;
+            position: absolute;
+            right: 50%;
+            transform: translate(50%, 0);
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            z-index: 150;
+          }
 
           &__triangle {
             margin: 0;
-            position: absolute;
-            top: 30px;
-            left: 50%;
-            transform: translate(-50%, 0);
-            width: 0px;
-            height: 0px;
+            position: relative;
+            width: 0;
+            height: 0;
             border-style: solid;
             border-width: 0 7.5px 10px 7.5px;
             border-color: transparent transparent $begieLight transparent;
@@ -222,12 +238,9 @@ h1, h2, h3, h4, h5, h6, p {
           }
 
           &__wrapper {
-            position: absolute;
+            position: relative;
             background: $begieLight;
             border-radius: 4px;
-            top: 40px;
-            right: 50%;
-            transform: translate(50%, 0);
             margin: 0;
             width: 200px;
             padding: 15px;
@@ -267,10 +280,21 @@ h1, h2, h3, h4, h5, h6, p {
             font-size: 12px;
             color: #4D4D4DFF;
           }
+
+          &__empty {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+
+            p {
+              font-size: 12px;
+              font-weight: bold;
+              line-height: 18px;
+            }
+          }
         }
       }
       div {
-        margin-left: 18px;
         font-size: 18px;
         cursor: pointer;
         color: $begieDark;
