--- a/src/assets/styles/sass/main.scss
+++ b/src/assets/styles/sass/main.scss
@@ -1,490 +1,16 @@
+// //////
+// Base
+// //////
 @import '_base.scss';
 @import "_fonts.scss";
 
-* {
-  box-sizing: border-box;
-  font-family: $p;
-  user-select: none;
-}
-
-body {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background: $begie;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-h1, h2, h3, h4, h5, h6, p {
-  margin: 0;
-  padding: 0;
-}
-
-.container {
-  max-width: 762px;
-}
-
-.container-inner {
-  position: relative;
-}
-
-.auth__checkbox__wrapper {
-  display: flex;
-  justify-content: space-between;
-}
-
-.auth__wrapper {
-  background: $begieLightAlpha75;
-  padding: 25px;
-  border-radius: $baseRa;
-  width: 300px;
-  font-size: 12px;
-  .auth__row {
-    width: 100%;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 4px;
-    margin-bottom: 15px;
-    &:focus {
-      outline: none;
-    }
-  }
-  .auth__password-wrapper {
-    position: relative;
-  }
-  .password_eye {
-    cursor: pointer;
-    color: $begieDark;
-    font-size: 13px;
-    position: absolute;
-    right: 15px;
-    top: 14px;
-  }
-  .auth__submit {
-    border: none;
-    margin-bottom: 0;
-    background: $begie;
-    cursor: pointer;
-    transition: 0.2s ease-in-out;
-    &:hover {
-      filter: brightness(85%);
-    }
-  }
-  .auth__checkbox {
-    display: flex;
-    align-items: center;
-    margin-bottom: 15px;
-    cursor: pointer;
-  }
-  .auth__links {
-    display: flex;
-    flex-direction: column;
-    margin-top: 15px;
-    a {
-      text-decoration: none;
-      color: $begieDark;
-      &:hover {
-        text-decoration: underline;
-      }
-    }
-  }
-  .confirmation-code {
-    display: flex;
-    justify-content: space-between;
-    .auth__row {
-      width: 35px;
-      padding: 10px 5px;
-      text-align: center;
-      &:focus {
-        outline: 2px solid $begie;
-      }
-    }
-  }
-}
-.bgdrop1 {
-  top: -50px;
-  right: -50px;
-  z-index: -100;
-  position: absolute;
-  height: 150px;
-  width: 150px;
-  border-radius: 1000px;
-  background: rgb(171, 172, 165);
-  opacity: 1;
-}
-.bgdrop2 {
-  left: -20px;
-  bottom: 100px;
-  transform: rotate(-10deg);
-  z-index: -100;
-  position: absolute;
-  right: 0;
-  height: 30px;
-  width: 30px;
-  background: rgb(171, 172, 165);
-  opacity: 1;
-}
-.bgdrop3 {
-  right: 40px;
-  bottom: -25px;
-  z-index: 100;
-  position: absolute;
-  opacity: 0.65;
-  width: 0px;
-  height: 0px;
-  border-style: solid;
-  border-width: 0 21.5px 37.2px 21.5px;
-  border-color: transparent transparent rgb(171, 172, 165) transparent;
-  transform: rotate(9deg);
-}
-
-.not-found {
-  background: $begieLightAlpha75;
-  padding: 40px;
-  position: relative;
-  border-radius: $baseRa;
-  color: $begieDark;
-  .not-found__icon {
-    position: absolute;
-    font-size: 70px;
-    right: -40px;
-    top: -20px;
-    z-index: -999;
-  }
-}
-
-.reminder__wrapper {
-  background: $begieLightAlpha75;
-  padding: 25px;
-  border-radius: $baseRa;
-  width: 568px;
-  height: 65vh;
-  font-size: 12px;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-
-  .reminder__header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    .header__buttons {
-      display: flex;
-      align-items: center;
-      gap: 18px;
-
-      .btn__notifications {
-        margin-top: 1px;
-        position: relative;
-
-        .notifications__count {
-          position: absolute;
-          font-size: 7px;
-          color: white;
-          background: $orange;
-          height: 10px;
-          width: 10px;
-          border-radius: 100px;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          line-height: 18px;
-          top: 3px;
-          right: -5px;
-        }
-
-        &:hover {
-          .notifications__inner {
-            display: flex;
-          }
-        }
-
-        .notifications {
-
-          &__inner {
-            display: none;
-            width: 200px;
-            position: absolute;
-            right: 50%;
-            transform: translate(50%, 0);
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            z-index: 150;
-          }
-
-          &__triangle {
-            margin: 0;
-            position: relative;
-            width: 0;
-            height: 0;
-            border-style: solid;
-            border-width: 0 7.5px 10px 7.5px;
-            border-color: transparent transparent $begieLight transparent;
-            z-index: 151;
-          }
-
-          &__wrapper {
-            position: relative;
-            background: $begieLight;
-            border-radius: 4px;
-            margin: 0;
-            width: 200px;
-            padding: 15px;
-            box-shadow: 0 4px 10px 5px rgba(0,0,0,0.1);
-            z-index: 150;
-
-            ul {
-              margin: 0;
-              padding: 0;
-              list-style-type: none;
-              display: flex;
-              flex-direction: column;
-              gap: 8px;
-
-              li {
-                background: $begie;
-                padding: 6px 10px;
-                border-radius: 4px;
-                font-size: 12px;
-                color: black;
-                display: flex;
-                flex-direction: column;
-                gap: 4px;
-              }
-            }
-          }
-
-          &__title {
-            font-size: 13px;
-          }
-
-          &__description {
-            font-size: 11px;
-          }
-
-          &__date {
-            font-size: 12px;
-            color: #4D4D4DFF;
-          }
-
-          &__empty {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-
-            p {
-              font-size: 12px;
-              font-weight: bold;
-              line-height: 18px;
-            }
-          }
-        }
-      }
-      div {
-        font-size: 18px;
-        cursor: pointer;
-        color: $begieDark;
-      }
-    }
-    .header__logo {
-      font-weight: 700;
-      color: $begieDark;
-      font-size: 16px;
-      span {
-        color: $orangeLight;
-      }
-    }
-  }
-  .reminder__calendar {
-    overflow-x: scroll;
-    overflow-y: hidden;
-    white-space: nowrap;
-    display: flex;
-    gap: 15px;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-
-    &::-webkit-scrollbar {
-      display: none;
-    }
-
-    .calendar__item {
-      display: inline-block;
-
-      .item__wrapper {
-        width: 80px;
-        cursor: pointer;
-        background: $begie;
-        border: 2px solid $begie;
-        color: black;
-        border-radius: $baseRa;
-        padding: 15px 10px;
-        text-align: center;
-        margin-bottom: 5px;
-        .item__weekday {
-          text-transform: capitalize;
-        }
-      }
-      &.current {
-        .item__wrapper {
-          background: black;
-          border: 2px solid black;
-          color: white;
-        }
-      }
-      &.selected {
-        .item__wrapper {
-          background: none;
-          border: 2px solid $begie;
-        }
-      }
-      &.current.selected {
-        .item__wrapper {
-          background: black;
-          border: 2px solid black;
-          color: white;
-        }
-      }
-
-      .item__progress {
-        display: flex;
-        justify-content: center;
-        div {
-          margin: 0 2px;
-          height: 5px;
-          width: 5px;
-          border-radius: 100px;
-        }
-        .progress__done {
-          background: $orange;
-        }
-        .progress__undone {
-
-          background: $orangeLight;
-        }
-      }
-    }
-  }
-
-  .reminder__tasks-wrapper {
-    display: flex;
-    flex: 1;
-    overflow: auto;
-    max-height: 100%;
-    padding-right: 8px;
-
-    &::-webkit-scrollbar {
-      width: 6px;
-      padding-left: 5px;
-    }
-
-    /* Track */
-    &::-webkit-scrollbar-track {
-      background: $begieLightAlpha25;
-      border-radius: 10px;
-    }
-
-    /* Handle */
-    &::-webkit-scrollbar-thumb {
-      background: $begie;
-      border-radius: 10px;
-    }
-
-    /* Handle on hover */
-    &::-webkit-scrollbar-thumb:hover {
-      background: $begieDark;
-    }
-
-    .reminder__tasks {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      gap: 10px;
-      width: 100%;
-
-      .tasks__item {
-        padding: 15px 10px;
-        background: $begieLight;
-        border-radius: $baseRa;
-        margin-bottom: 10px;
-        display: flex;
-        width: 100%;
-
-        .item__checkbox {
-          cursor: pointer;
-          height: 20px;
-          width: 20px;
-          border-radius: 100px;
-          border: 3px solid $orangeLight;
-          margin-right: 10px;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          color: black;
-          font-size: 11px;
-          svg {
-            display: none;
-          }
-          &.checked {
-            background: $orange;
-            border: 3px solid $orange;
-            color: white;
-            svg {
-              display: block;
-            }
-          }
-        }
-      }
-    }
-  }
-
-  .empty-tasks {
-    position: relative;
-    display: flex;
-    gap: 15px;
-
-    span {
-      //opacity: 0.7;
-      height: 60px;
-      width: 60px;
-
-      #circle {
-        fill: $brown;
-      }
-      //#eyes,
-      //#brows {
-      //  fill: $orangeLight;
-      //}
-      #hand {
-        fill: $orangeLight;
-      }
-    }
-
-    p {
-      color: black;
-      opacity: 0.6;
-      font-size: 18px;
-      font-weight: bold;
-      z-index: 5;
-      width: 200px;
-    }
-  }
-}
+//////////////
+// Components
+//////////////
+@import "components/common";
+@import "components/auth";
+@import "components/reminder";
+@import "components/user-menu";
 
 
 
